plonetheme/onegovbear/theme/scss/simplelayout.scss
$toolbar-bg-color: $gray-dark;
$action-bg-color: $gray-dark;
$action-bg-color-hover: $gray-light;

$column-bg-color: $gray-light;

$block-placeholder-bg-color: $gray;
$block-placeholder-border-size: 1px;
$block-placeholder-border-style: dotted;
$block-placeholder-border-color: $gray-dark;

$layout-placeholder-bg-color: $block-placeholder-bg-color;
$layout-placeholder-border-size: $block-placeholder-border-size;
$layout-placeholder-border-style: $block-placeholder-border-style;
$layout-placeholder-border-color: $block-placeholder-border-color;

$simplelayout-gutter-width: $gutter-width !default;
$simplelayout-columns: $columns !default;

$simplelayout-block-glow-color: transparentize($primary-color, 60%);

ul[class^="sl-toolbar"] {
  background-color: $toolbar-bg-color;
  border-radius: $border-radius;
  @include transition(opacity .3s ease-out);
  z-index: 100;
}

.sl-simplelayout {
  display: block;
  @include clearfix;
  .layout-placeholder {
    background-color: $layout-placeholder-bg-color;
    border: $layout-placeholder-border-size $layout-placeholder-border-style $layout-placeholder-border-color;
  }
}

.sl-toolbox {
  a {
    font-size: 14px;
    font-weight: normal;
  }
}

.sl-block {
  @include transition(box-shadow .3s ease-out);
  @include clearfix();
  &:hover {
    @include boxshadow(0 0 20px 0 $simplelayout-block-glow-color);
  }

  .sl-block-content {
    img {
      max-width: 100%;
    }
  }
}

.sl-column {
  .block-placeholder {
    margin-bottom: 1px;
  }
}

.sl-layout {
  @include clearfix();
  .block-placeholder {
    background-color: $block-placeholder-bg-color;
    border: $block-placeholder-border-size $block-placeholder-border-style $block-placeholder-border-color;
  }
}

.sl-simplelayout {
  .layout-placeholder {
    background-color: $layout-placeholder-bg-color;
    border: $layout-placeholder-border-size $layout-placeholder-border-style $layout-placeholder-border-color;
  }
}

// Special handling for blocks in the side par
#column-sidebar {
    .sl-column {
        background-color: transparent;
        .sl-block {
            background-color: transparent;
            margin-bottom: 0;
        }
    }
}

// If user is permitted to edit the simplelayout page
.documentEditable {
  .sl-column:empty {
    outline: 2px dashed rgba(0, 0, 0, 0.6);
  }
}

.sl-column {
  $gutter-width: 100% / $gridsystem-width * $simplelayout-gutter-width * 2;
  float: left;
  min-height: 100px;
  @for $i from 1 through $simplelayout-columns {
    &.sl-col-#{$i} {
      margin-right: 0;
      width: 100%;

      &:last-of-type {
        margin-right: 0 !important;
      }
    }
  }

  @media (min-width: $mobile-small) {
    @for $i from 1 through $simplelayout-columns {
      &.sl-col-#{$i} {
        margin-right: $gutter-width;
        width: 100% / ($i / 2) - ($gutter-width / ($i / 2));
        &:nth-of-type(#{$i / 2}n+#{$i / 2}) {
          margin-right: 0;
        }
      }
      &.sl-col-1 {
        width: 100%;
      }
      &.sl-col-2 {
        width: 100%;
      }
    }
  }

  @media (min-width: $desktop-XGA-width) {
    @for $i from 1 through $simplelayout-columns {
      &.sl-col-#{$i} {
        margin-right: $gutter-width;
        width: 100% / $i - $gutter-width + $gutter-width / $i;

        &:nth-of-type(#{$i / 2}n+#{$i / 2}) {
          margin-right: $gutter-width;
        }

        &:last-of-type {
          margin-right: 0 !important;
        }
      }
    }
  }

  .block-placeholder {
    margin-bottom: 1px;
  }
}

